<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.RegisterActivity"
    android:background="@drawable/carbackground">

    <EditText
        android:id="@+id/regFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/reg_first_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/regLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/regFirstName"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/regFirstName"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/reg_last_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/regEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/regLastName"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/regLastName"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/reg_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/regPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/reg_password"
        android:inputType="textPassword"
        android:layout_below="@+id/regEmail"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_alignEnd="@+id/regEmail" />

    <EditText
        android:id="@+id/regCfnPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/regPassword"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/regPassword"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/reg_confirm_password"
        android:inputType="textPassword" />


   <!-- <Button
        android:id="@+id/regRegisterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/regCfnPassword"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="50dp"
        android:text="Register"
        android:background="#008888"
        android:textColor="#FFFFFF" />-->

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/regRegisterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        fancy:fb_borderColor="#FFFFFF"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="#008888"
        fancy:fb_focusColor="#008800"
        fancy:fb_iconPosition="bottom"
        fancy:fb_radius="30dp"
        fancy:fb_text="REGISTER"
        fancy:fb_textColor="#FFFFFF"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="51dp"
        android:layout_alignEnd="@+id/regCfnPassword" />

</RelativeLayout>
