<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.SettingActivity"
    tools:showIn="@layout/app_bar_setting"
    android:background="@drawable/carbackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/view2"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <AutoCompleteTextView
                android:id="@+id/settingFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/setting_first_name"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/view3"
                android:layout_marginTop="35dp"
                android:layout_below="@+id/view2"
                android:layout_alignParentStart="true">

        <AutoCompleteTextView
            android:id="@+id/settingLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/setting_last_name"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_marginTop="48dp"
            android:layout_below="@+id/view2"
            android:layout_alignParentStart="true"
            android:inputType="text" />


          </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/view3"
        android:layout_alignParentStart="true">

           <AutoCompleteTextView
            android:id="@+id/settingEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/setting_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

         </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

</RelativeLayout>
