<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.ConfirmationActivity"
    android:background="@drawable/carbackground">


                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:text="Reservation Details"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#AAAAAA"
        android:orientation="horizontal"
        android:layout_below="@+id/textView16"
        android:layout_alignParentEnd="true"></LinearLayout>



    <TextView
                            android:id="@+id/textView20"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_below="@+id/textView16"
                            android:text="Start:"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#000000"
                        android:layout_marginTop="15dp" />

                        <TextView
                            android:id="@+id/confirmationEndDateTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:editable="false"
                            android:text="@string/confirmation_end_date"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="#008888"
                            android:layout_alignBottom="@+id/textView22"
                            android:layout_alignStart="@+id/confirmationStartDateTextView" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#AAAAAA"
        android:orientation="horizontal"
        android:layout_below="@+id/confirmationStartTimeTextView"
        android:layout_alignParentEnd="true"></LinearLayout>




                        <TextView
                            android:id="@+id/textView22"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="End:"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#000000"
                            android:layout_below="@+id/confirmationStartTimeTextView"
                            android:layout_alignParentStart="true"
                            android:layout_marginTop="15dp" />

                        <TextView
                            android:id="@+id/confirmationStartDateTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:editable="false"
                            android:text="@string/confirmation_start_date"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="#008888"
                            android:layout_alignBottom="@+id/textView20"
                            android:layout_toEndOf="@+id/textView32"
                            android:layout_marginLeft="15dp" />


                        <TextView
                            android:id="@+id/confirmationStartTimeTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
        android:editable="false"
                            android:text="@string/confirmation_start_time"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="#008888"
                            android:layout_marginLeft="15dp"
                            android:layout_alignTop="@+id/confirmationStartDateTextView"
                            android:layout_alignEnd="@+id/confirmationPaymentGateway" />

    <TextView
                            android:id="@+id/confirmationEndTimeTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:editable="false"
                            android:text="@string/confirmation_end_time"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="#008888"
        android:layout_alignTop="@+id/confirmationEndDateTextView"
        android:layout_alignStart="@+id/confirmationStartTimeTextView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#AAAAAA"
        android:orientation="horizontal"
        android:layout_below="@+id/confirmationEndTimeTextView"
        android:layout_alignParentEnd="true"></LinearLayout>



    <TextView
                        android:id="@+id/textView28"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="Location:"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#000000"
                        android:layout_below="@+id/confirmationEndTimeTextView"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="15dp" />

                    <TextView
                        android:id="@+id/confirmationLocationTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:editable="false"
                        android:text="@string/confirmation_location"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#008888"
                        android:layout_below="@+id/confirmationEndTimeTextView"
                        android:layout_alignStart="@+id/confirmationEndDateTextView"
                        android:layout_marginTop="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#AAAAAA"
        android:orientation="horizontal"
        android:layout_below="@+id/confirmationLocationTextView"
        android:layout_alignParentEnd="true"></LinearLayout>

    <TextView
                        android:id="@+id/textView32"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="Price/hr:"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#000000"
                        android:layout_below="@+id/confirmationLocationTextView"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="15dp" />

                    <TextView
                        android:id="@+id/confirmationPricePerHrTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:editable="false"
                        android:text="@string/confirmation_price_per_hr"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#008888"
                        android:layout_alignBottom="@+id/textView32"
                        android:layout_alignStart="@+id/confirmationLocationTextView" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#AAAAAA"
        android:orientation="horizontal"
        android:layout_below="@+id/confirmationPricePerHrTextView"
        android:layout_alignParentEnd="true"></LinearLayout>

    <TextView
                        android:id="@+id/textView30"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="Total Hrs:"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#000000"
                        android:layout_below="@+id/textView32"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="15dp" />

                    <TextView
                        android:id="@+id/confirmationTotalTimeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:editable="false"
                        android:text="@string/confirmation_total_time"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#008888"
                        android:layout_alignBottom="@+id/textView30"
                        android:layout_alignStart="@+id/confirmationPricePerHrTextView"
                        android:layout_marginLeft="5dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#AAAAAA"
        android:orientation="horizontal"
        android:layout_below="@+id/confirmationTotalTimeTextView"
        android:layout_alignParentEnd="true"></LinearLayout>


    <TextView
                        android:id="@+id/textView34"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="Total Price:"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#000000"
                        android:layout_marginTop="15dp"
                        android:layout_below="@+id/textView30"
                        android:layout_alignParentStart="true" />

                    <TextView
                        android:id="@+id/confirmationTotalPriceTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/textView34"
                        android:layout_toEndOf="@+id/confirmationPricePerHrTextView"
                        android:layout_weight="0.5"
                        android:editable="false"
                        android:text="@string/confirmation_total_price"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#008888" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#AAAAAA"
        android:orientation="horizontal"
        android:layout_below="@+id/confirmationTotalPriceTextView"
        android:layout_alignParentEnd="true"></LinearLayout>

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
                    android:text="Payment Method"
        android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_below="@+id/textView34"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#AAAAAA"
        android:orientation="horizontal"
        android:layout_below="@+id/textView36"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayout6"></LinearLayout>



    <TextView
        android:id="@+id/confirmationPaymentGateway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="Payment Gateway UI will appear here"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/textView36"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:textColor="#008888" />



   <!-- <Button
        android:id="@+id/confirmationReserveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Reserve"
        android:layout_below="@+id/confirmationPaymentGateway"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/confirmationLocationTextView"
        android:layout_marginTop="15dp"
        android:background="#008888"
        android:textColor="#FFFFFF" />-->

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/confirmationReserveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        fancy:fb_borderColor="#FFFFFF"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="#008888"
        fancy:fb_focusColor="#008800"
        fancy:fb_iconPosition="bottom"
        fancy:fb_radius="30dp"
        fancy:fb_text="RESERVE"
        fancy:fb_textColor="#FFFFFF"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/confirmationPaymentGateway"
        android:layout_alignEnd="@+id/linearLayout6" />


</RelativeLayout>
